Fix very small text in about me section on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -107,11 +107,22 @@ a {
 }
 
 @media only screen and (max-width: 768px) {
+  .about-me {
+    flex-direction: column;
+    font-size: 18px;
+  }
+  .profile-pic {
+    display: flex;
+    margin: auto;
+    margin-bottom: 1em;
+    max-width: 40%;
+    height: auto;
+  }
   .sidenav {
     font-size: 14px;
   }
   .header-large {
-    font-size: 22px;
+    font-size: 24px;
   }
   .header-medium-1 {
     font-size: 20px;
@@ -125,6 +136,14 @@ a {
 }
 
 @media only screen and (min-width: 769px) {
+  .about-me {
+    flex-direction: row;
+    font-size: 24px;
+  }
+  .profile-pic {
+    max-width: 90%;
+    height: auto;
+  }
   .sidenav {
     font-size: 18px;
   }
